--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,102 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activitys.MainActivity"
-    android:background="@color/colorPrimaryDark">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="15dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Common"
-                android:id="@+id/textView"
-                android:layout_centerHorizontal="true"
-                android:textStyle="bold"
-                android:textSize="26dp" />
-
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:id="@+id/adActionType"
-                android:spinnerMode="dialog"
-                android:layout_below="@+id/textView"
-                android:layout_marginTop="15dp" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText"
-                android:layout_below="@+id/adActionType"
-                android:hint="Data"
-                android:layout_marginTop="10dp"
-                android:text="com.CatTaxi" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Set time"
-                android:id="@+id/setTime"
-                android:layout_below="@+id/editText"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="15dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Notifications"
-                android:id="@+id/notificationsText"
-                android:layout_centerHorizontal="true"
-                android:textStyle="bold"
-                android:textSize="26dp" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/notificationTitle"
-                android:layout_below="@+id/notificationsText"
-                android:hint="Title"
-                android:layout_marginTop="10dp" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/notificationDescription"
-                android:hint="Description"
-                android:layout_gravity="center_horizontal"
-                android:layout_below="@+id/notificationTitle"
-                android:layout_marginTop="10dp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Add notification"
-                android:id="@+id/addNotification"
-                android:layout_gravity="center_horizontal"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/notificationDescription" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
-</ScrollView>
+        android:layout_height="match_parent"
+        android:id="@+id/mainFrame"></FrameLayout>
+</LinearLayout>
